--- a/footer.html
+++ b/footer.html
@@ -1,4 +1,24 @@
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<!-- Required meta tags -->
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+		<!-- Bootstrap CSS -->
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
+
+		<!-- font awesome icons -->
+		<script src="https://kit.fontawesome.com/065b6a01b6.js" crossorigin="anonymous"></script>
+
+		<!-- external stylesheet -->
+		<link rel="stylesheet" href="css/styles-home-page.css" />
+
+		<title>Signode Canada</title>
+	</head>
+
+<body>
 <footer class="text-left text-lg-start text-white fixed-bottom">
     <!-- Section: Links  -->
 	<section>
@@ -90,4 +110,8 @@
         </div>
     </section>
   </footer>
+
+  </body>
+  </html>
+
   <!-- Footer -->
