finished hero banner

--- a/index.html
+++ b/index.html
@@ -19,151 +19,149 @@
 	</head>
 
 	<body>
-		
+        <header>
 
-		<!-- ******************************* NAVIGATION BAR ONE ************************************** -->
+			<!-- ******************************* NAVIGATION BAR ONE ************************************** -->
 
-		<nav class="navbar navbar-expand-lg py-0" id="navbar-one-custom">
-			<div class="container-fluid">
-				<span>
-					<!-- location -->
-					<a class="location navbar-brand">
-						<i class="fa-solid fa-location-dot"></i>
-						<span class="navbar-text"> &nbsp; 241 Gough Road Markham, ON, Canada L3R 5B3 &nbsp; &nbsp; </span>
+			<nav class="navbar navbar-expand-lg py-0" id="navbar-one-custom">
+				<div class="container-fluid">
+					<span>
+						<!-- location -->
+						<a class="location navbar-brand">
+							<i class="fa-solid fa-location-dot"></i>
+							<span class="navbar-text"> &nbsp; 241 Gough Road Markham, ON, Canada L3R 5B3 &nbsp; &nbsp; </span>
+						</a>
+
+						<!-- contact -->
+						<a class="contact navbar-brand">
+							<i class="fa-solid fa-phone"></i>
+							<span class="navbar-text"> &nbsp; 905-479-9754 / Toll-free: 1-800-387-5173 / Fax: 905-479-4869 </span>
+						</a>
+					</span>
+
+					<!-- socials -->
+					<a class="socials navbar-brand">
+						<i class="fa-brands fa-linkedin"></i>
+						<i class="fa-brands fa-youtube"></i>
+					</a>
+				</div>
+			</nav>
+			
+			
+			<!-- ******************************* NAVIGATION BAR TWO ************************************** -->
+			
+			<nav class="navbar navbar-expand-lg navbar-dark" id="navbar-two-custom"> 
+				<div class="container">
+					<!-- logo -->
+					<a class="navbar-brand">
+						<img src="images/home-page/signode-logo.png" alt="" width="180" />
 					</a>
 
-					<!-- contact -->
-					<a class="contact navbar-brand">
-						<i class="fa-solid fa-phone"></i>
-						<span class="navbar-text"> &nbsp; 905-479-9754 / Toll-free: 1-800-387-5173 / Fax: 905-479-4869 </span>
-					</a>
-				</span>
+					<!-- responsive navigation menu -->
+					<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+						<span class="navbar-toggler-icon"></span>
+					</button>
 
-				<!-- socials -->
-				<a class="socials navbar-brand">
-					<i class="fa-brands fa-linkedin"></i>
-					<i class="fa-brands fa-youtube"></i>
-				</a>
-			</div>
-		</nav>
+					<!-- navbar items -->
+					<div class="collapse navbar-collapse" id="navbarSupportedContent">
+						<ul class="navbar-nav ml-auto mb-2 mb-lg-0" id="navbar-items">
+							<li class="nav-item px-2">
+								<a class="nav-link active" aria-current="page" href="#">Home</a>
+							</li>
 
-		<!-- ******************************* NAVIGATION BAR TWO ************************************** -->
+							<li class="nav-item dropdown px-2">
+								<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Company </a>
+								<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+									<li>
+										<a class="dropdown-item" href="#">Action</a>
+									</li>
+									<li>
+										<a class="dropdown-item" href="#">Another action</a>
+									</li>
+									<li><hr class="dropdown-divider" /></li>
+									<li>
+										<a class="dropdown-item" href="#">Something else here</a>
+									</li>
+								</ul>
+							</li>
+
+							<li class="nav-item dropdown px-2">
+								<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Industries </a>
+								<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+									<li>
+										<a class="dropdown-item" href="#">Action</a>
+									</li>
+									<li>
+										<a class="dropdown-item" href="#">Another action</a>
+									</li>
+									<li><hr class="dropdown-divider" /></li>
+									<li>
+										<a class="dropdown-item" href="#">Something else here</a>
+									</li>
+								</ul>
+							</li>
+
+							<li class="nav-item dropdown px-2">
+								<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Products </a>
+								<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+									<li>
+										<a class="dropdown-item" href="#">Action</a>
+									</li>
+									<li>
+										<a class="dropdown-item" href="#">Another action</a>
+									</li>
+									<li><hr class="dropdown-divider" /></li>
+									<li>
+										<a class="dropdown-item" href="#">Something else here</a>
+									</li>
+								</ul>
+							</li>
+
+							<li class="nav-item dropdown px-2">
+								<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Solutions </a>
+								<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+									<li>
+										<a class="dropdown-item" href="#">Action</a>
+									</li>
+									<li>
+										<a class="dropdown-item" href="#">Another action</a>
+									</li>
+									<li><hr class="dropdown-divider" /></li>
+									<li>
+										<a class="dropdown-item" href="#">Something else here</a>
+									</li>
+								</ul>
+							</li>
+
+							<li class="nav-item px-2">
+								<a class="nav-link active" aria-current="page" href="#">Careers</a>
+							</li>
+
+							<li class="nav-item px-2">
+								<a class="nav-link active" aria-current="page" href="#">Contact</a>
+							</li>
+						</ul>
+
+						<form class="d-flex" role="search">
+							<input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
+							<button class="btn btn-outline-success" type="submit">Search</button>
+						</form>
+					</div>
+				</div>
+			</nav>
 
 
+			<!-- ******************************* HERO BANNER ************************************** -->
 
-
-		<nav class="navbar navbar-expand-lg navbar-dark" id="navbar-two-custom"> 
-			<div class="container">
-				<!-- logo -->
-				<a class="navbar-brand">
-					<img src="images/home-page/signode-logo.png" alt="" width="180" />
-				</a>
-
-				<!-- responsive navigation menu -->
-				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-					<span class="navbar-toggler-icon"></span>
-				</button>
-
-				<!-- navbar items -->
-				<div class="collapse navbar-collapse" id="navbarSupportedContent">
-					<ul class="navbar-nav ml-auto mb-2 mb-lg-0" id="navbar-items">
-						<li class="nav-item px-2">
-							<a class="nav-link active" aria-current="page" href="#">Home</a>
-						</li>
-
-						<li class="nav-item dropdown px-2">
-							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Company </a>
-							<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-								<li>
-									<a class="dropdown-item" href="#">Action</a>
-								</li>
-								<li>
-									<a class="dropdown-item" href="#">Another action</a>
-								</li>
-								<li><hr class="dropdown-divider" /></li>
-								<li>
-									<a class="dropdown-item" href="#">Something else here</a>
-								</li>
-							</ul>
-						</li>
-
-						<li class="nav-item dropdown px-2">
-							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Industries </a>
-							<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-								<li>
-									<a class="dropdown-item" href="#">Action</a>
-								</li>
-								<li>
-									<a class="dropdown-item" href="#">Another action</a>
-								</li>
-								<li><hr class="dropdown-divider" /></li>
-								<li>
-									<a class="dropdown-item" href="#">Something else here</a>
-								</li>
-							</ul>
-						</li>
-
-						<li class="nav-item dropdown px-2">
-							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Products </a>
-							<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-								<li>
-									<a class="dropdown-item" href="#">Action</a>
-								</li>
-								<li>
-									<a class="dropdown-item" href="#">Another action</a>
-								</li>
-								<li><hr class="dropdown-divider" /></li>
-								<li>
-									<a class="dropdown-item" href="#">Something else here</a>
-								</li>
-							</ul>
-						</li>
-
-						<li class="nav-item dropdown px-2">
-							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Solutions </a>
-							<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-								<li>
-									<a class="dropdown-item" href="#">Action</a>
-								</li>
-								<li>
-									<a class="dropdown-item" href="#">Another action</a>
-								</li>
-								<li><hr class="dropdown-divider" /></li>
-								<li>
-									<a class="dropdown-item" href="#">Something else here</a>
-								</li>
-							</ul>
-						</li>
-
-						<li class="nav-item px-2">
-							<a class="nav-link active" aria-current="page" href="#">Careers</a>
-						</li>
-
-						<li class="nav-item px-2">
-							<a class="nav-link active" aria-current="page" href="#">Contact</a>
-						</li>
-					</ul>
-
-					<form class="d-flex" role="search">
-						<input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
-						<button class="btn btn-outline-success" type="submit">Search</button>
-					</form>
+			<div class="bg-image p-5 text-left shadow-1-strong mb-5 text-white d-flex" style="background-image: url('../images/home-page/banner-image.png'); height: 700px;">
+				<div class="container banner-text align-self-center my-auto">
+					<h1>WE'LL <span style="color: #b43c25">PROTECT</span> IT FROM HERE.</h1>
+					<div class="banner-divider-dash"></div> 
+					<p class="col-7">Innovative, protective solutions for your packaging needs. Superior strap for the lightest to heaviest duty applications.</p>
 				</div>
 			</div>
-		</nav>
-
-		<!-- ******************************* HERO BANNER ************************************** -->
-
-		<div id="banner-image"></div>
-
-        <div class="container">
-            <div class="banner-text">
-                <h1>WE'LL PROTECT IT FROM HERE.</h1>
-                <div class="banner-divider-dash"></div> 
-                <p>Innovative, protective solutions for your packaging needs. Superior strap for the lightest to heaviest duty applications.</p>
-            </div>
-        </div>
-        
+			
+		</header>
 
 		
         <!-- ******************************* WHAT WE DO & WHY SIGNODE************************************** -->
