--- a/index.html
+++ b/index.html
@@ -56,19 +56,19 @@
 					<a class="navbar-brand">
 						<img src="images/home-page/signode-logo.png" alt="" width="180" />
 					</a>
-
+			
 					<!-- responsive navigation menu -->
-					<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+					<button class="navbar-toggler custom-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 						<span class="navbar-toggler-icon"></span>
 					</button>
-
+			
 					<!-- navbar items -->
 					<div class="collapse navbar-collapse" id="navbarSupportedContent">
 						<ul class="navbar-nav ml-auto mb-2 mb-lg-0" id="navbar-items">
 							<li class="nav-item px-2">
 								<a class="nav-link active" aria-current="page" href="#">Home</a>
 							</li>
-
+			
 							<li class="nav-item dropdown px-2">
 								<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Company </a>
 								<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -84,7 +84,7 @@
 									</li>
 								</ul>
 							</li>
-
+			
 							<li class="nav-item dropdown px-2">
 								<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Industries </a>
 								<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -100,7 +100,7 @@
 									</li>
 								</ul>
 							</li>
-
+			
 							<li class="nav-item dropdown px-2">
 								<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Products </a>
 								<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -116,7 +116,7 @@
 									</li>
 								</ul>
 							</li>
-
+			
 							<li class="nav-item dropdown px-2">
 								<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Solutions </a>
 								<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -132,23 +132,25 @@
 									</li>
 								</ul>
 							</li>
-
+			
 							<li class="nav-item px-2">
 								<a class="nav-link active" aria-current="page" href="#">Careers</a>
 							</li>
-
+			
 							<li class="nav-item px-2">
 								<a class="nav-link active" aria-current="page" href="#">Contact</a>
 							</li>
 						</ul>
-
+			
 						<form class="d-flex" role="search">
 							<input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
-							<button class="btn btn-outline-success" type="submit">Search</button>
+							<!-- <button class="btn btn-outline-success" type="submit">Search</button> -->
 						</form>
 					</div>
 				</div>
 			</nav>
+
+			
 
 
 			<!-- ******************************* HERO BANNER ************************************** -->
@@ -161,11 +163,10 @@
 				</div>
 			</div>
 			
-		</header>
+		</header> 
 
 		
         <!-- ******************************* WHAT WE DO & WHY SIGNODE************************************** -->
-
 
 		<div class="container marketing">
             
@@ -230,7 +231,80 @@
 
         <br><br><br><br><br><br>
 
+		<hr>
 
+        <!-- ******************************* INDUSTRIES ************************************** -->
+
+		<!-- subheading and heading -->
+		<div class="container">
+
+			<div class="featurette-heading">
+				<h5 class="sub-heading"><i>Sectors</i></h5>
+				<h2 class="fw-normal lh-1 main-heading">Industries</h2>
+			</div>
+
+			<div class="divider-dash"></div> 
+			
+		</div>
+
+        <div class="album py-5">
+			<div class="container">
+	
+				<!-- industry item -->
+			  <div class="row">
+				<div class="col-md-4">
+				  <div class="card mb-4 box-shadow">
+					<img class="card-img-top" data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=Thumbnail" alt="Card image cap">
+					<div class="card-body">
+					  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+					  <div class="d-flex justify-content-between align-items-center">
+						<div class="btn-group">
+						  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+						  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+						</div>
+						<small class="text-muted">9 mins</small>
+					  </div>
+					</div>
+				  </div>
+				</div>
+
+				<!-- industry item -->
+				<div class="col-md-4">
+				  <div class="card mb-4 box-shadow">
+					<img class="card-img-top" data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=Thumbnail" alt="Card image cap">
+					<div class="card-body">
+					  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+					  <div class="d-flex justify-content-between align-items-center">
+						<div class="btn-group">
+						  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+						  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+						</div>
+						<small class="text-muted">9 mins</small>
+					  </div>
+					</div>
+				  </div>
+				</div>
+
+				<!-- industry item -->
+				<div class="col-md-4">
+				  <div class="card mb-4 box-shadow">
+					<img class="card-img-top" data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=Thumbnail" alt="Card image cap">
+					<div class="card-body">
+					  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+					  <div class="d-flex justify-content-between align-items-center">
+						<div class="btn-group">
+						  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+						  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+						</div>
+						<small class="text-muted">9 mins</small>
+					  </div>
+					</div>
+				  </div>
+				</div>
+	
+			  </div>
+			</div>
+		  </div>
 
 		<!-- Bootstrap JavaScript -->
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
