finished industries section

--- a/footer.html
+++ b/footer.html
@@ -19,7 +19,7 @@
 	</head>
 
 <body>
-<footer class="text-left text-lg-start text-white fixed-bottom">
+<footer class="text-left text-lg-start text-white">
     <!-- Section: Links  -->
 	<section>
 	    <div class="container text-left text-md-start mt-5">
