careers page progress

--- a/about.html
+++ b/about.html
@@ -51,12 +51,14 @@
                 <!-- text -->
                 <div class="col-md-6 order-md-1">
 
+                    <!-- heading -->
                     <div class="featurette-heading">
-                        <h5 class="sub-heading">Company</h5>
-                        <h2 class="fw-normal lh-1 main-heading">About Us</h2>
+                        <h5 class="sub-heading">Careers</h5>
+                        <h2 class="fw-normal lh-1 main-heading">Join Our Team</h2>
                     </div>
 
                     <div class="divider-dash"></div> 
+					<!-- end heading -->
                     
                     <p class="lead text-content">Aside from setting industry standards with quality materials and equipment, what makes Signode unique is our systems approach to serving customers’ needs. 
                     <br><br>
@@ -269,12 +271,14 @@
         <br><br><br>
         <div class="container">
 
+            <!-- heading -->
             <div class="featurette-heading">
-                <h5 class="sub-heading">Company</h5>
-                <h2 class="fw-normal lh-1 main-heading">History</h2>
+                <h5 class="sub-heading">Careers</h5>
+                <h2 class="fw-normal lh-1 main-heading">Join Our Team</h2>
             </div>
 
             <div class="divider-dash"></div> 
+            <!-- end heading -->
 
             <img src="images/about-page/history-timeline.svg" alt="" class="img-fluid mx-auto d-block">
             <br><br>
