--- a/industries.html
+++ b/industries.html
@@ -44,14 +44,17 @@
         <!-- ******************************* INDUSTRIES ************************************** -->
 
 		<!-- Subheading and heading -->
-        <br><br><br>
+        <br><br><br><br>
 		<div class="container">
+			<!-- heading -->
 			<div class="featurette-heading">
-				<h5 class="sub-heading">Sectors</h5>
-				<h2 class="fw-normal lh-1 main-heading">Industries</h2>
+				<h5 class="sub-heading">Careers</h5>
+				<h2 class="fw-normal lh-1 main-heading">Join Our Team</h2>
 			</div>
 
 			<div class="divider-dash"></div> 
+			<!-- end heading -->
+			
 		</div> <br><br>
 
 		<!-- Industries gallery -->
