work on navbar dropdowns, responsive search box

--- a/brands.html
+++ b/brands.html
@@ -45,8 +45,8 @@
 		<div class="container">
 			<!-- heading -->
 			<div class="featurette-heading">
-				<h5 class="sub-heading">Careers</h5>
-				<h2 class="fw-normal lh-1 main-heading">Join Our Team</h2>
+				<h5 class="sub-heading">Company</h5>
+				<h2 class="fw-normal lh-1 main-heading">Brands</h2>
 			</div>
 
 			<div class="divider-dash"></div>
@@ -311,6 +311,9 @@
 
 		<!-- Bootstrap JavaScript -->
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+
+		<!-- Page-specific javascript -->
+		<script src="js/search-bar.js"></script>
 
 		<!-- Footer JavaScript -->
 		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
