--- a/about.html
+++ b/about.html
@@ -53,8 +53,8 @@
 
                     <!-- heading -->
                     <div class="featurette-heading">
-                        <h5 class="sub-heading">Careers</h5>
-                        <h2 class="fw-normal lh-1 main-heading">Join Our Team</h2>
+                        <h5 class="sub-heading">Company</h5>
+                        <h2 class="fw-normal lh-1 main-heading">About Us</h2>
                     </div>
 
                     <div class="divider-dash"></div> 
@@ -273,8 +273,8 @@
 
             <!-- heading -->
             <div class="featurette-heading">
-                <h5 class="sub-heading">Careers</h5>
-                <h2 class="fw-normal lh-1 main-heading">Join Our Team</h2>
+                <h5 class="sub-heading">Company</h5>
+                <h2 class="fw-normal lh-1 main-heading">History</h2>
             </div>
 
             <div class="divider-dash"></div> 
@@ -295,6 +295,9 @@
 
 		<!-- Bootstrap JavaScript -->
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+
+        <!-- Page-specific javascript -->
+		<script src="js/search-bar.js"></script>
 
 		<!-- Footer JavaScript -->
   		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
