--- a/careers.html
+++ b/careers.html
@@ -155,7 +155,7 @@
                   </div>
             
           
-                <!-- <br><br><br><br><br><br><br><br><br><br> -->
+                <br><br><br><br><br><br><br><br><br><br>
 
               </div>
 		</div>
@@ -170,6 +170,9 @@
 
 		<!-- Bootstrap JavaScript -->
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+
+        <!-- Page-specific javascript -->
+		<script src="js/search-bar.js"></script>
 
 		<!-- Footer JavaScript -->
   		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
