--- a/index.html
+++ b/index.html
@@ -26,6 +26,24 @@
 				$('#navbar-two').load('partials/navbar-two.html');
 				$('#footer').load('partials/footer.html');
 			});
+
+			$('.testi3').owlCarousel({
+				loop: true,
+				margin: 30,
+				nav: false,
+				dots: true,
+				autoplay: true,
+				responsiveClass: true,
+				responsive: {
+					0: {
+					items: 1,
+					nav: false
+					},
+					1024: {
+					items: 3
+					}
+				}
+				})
 		</script>
 	</head>
 
@@ -264,6 +282,26 @@
 			  </div>
 			</div>
 		  </div>
+
+		  <br><br><br><br><br>
+		
+
+		<!-- ******************************* TESTIMONIALS ************************************** -->
+		<div class="container">
+			<!-- heading -->
+			<div class="featurette-heading">
+				<h5 class="sub-heading">Testimonials</h5>
+				<h2 class="fw-normal lh-1 main-heading">From Our Customers</h2>
+			</div>
+
+			<div class="divider-dash"></div> 
+			<!-- end heading -->
+
+
+
+			<br><br><br><br><br><br>
+
+		</div>
 		
 
 		<!-- ******************************* FOOTER ************************************** -->
