--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
 		<title>Signode Canada</title>
 
+		<!-- load partials -->
 		<script>
 			$(function(){
 				$('#navbar-one').load('partials/navbar-one.html');
@@ -27,23 +28,6 @@
 				$('#footer').load('partials/footer.html');
 			});
 
-			$('.testi3').owlCarousel({
-				loop: true,
-				margin: 30,
-				nav: false,
-				dots: true,
-				autoplay: true,
-				responsiveClass: true,
-				responsive: {
-					0: {
-					items: 1,
-					nav: false
-					},
-					1024: {
-					items: 3
-					}
-				}
-				})
 		</script>
 	</head>
 
@@ -314,14 +298,8 @@
 		<!-- Bootstrap JavaScript -->
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 
-		<!-- Page-specific javascript -->
+		<!-- Page specific Javascript -->
 		<script src="js/animated-stats.js"></script>
-		<script src="js/search-bar.js"></script>
-
-		<!-- Footer JavaScript -->
-  		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-  		<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 
 	</body>
 </html>
