made solutions section and animated stats responsive, fixed margins and padding

--- a/index.html
+++ b/index.html
@@ -140,8 +140,7 @@
                 <h2 class="fw-normal lh-1 main-heading">Solutions</h2><br>
             </div>
 
-            <!-- SOLUTIONS: DESKTOP -->
-            <div class="row align-items-start" id="solutions-desktop">
+            <div class="row align-items-start">
                 <div class="col-sm-12 col-md">
                     <!-- icon -->
                     <img src="images/home-page/process.png" class="process-icon mx-auto d-block" alt="">
@@ -192,7 +191,7 @@
         </div>
 
         </div>
-		<br>
+		<br><br><br>
 
 
 
@@ -302,34 +301,47 @@
 		
 		<div id="stats">
 			<div class="container">
-			  <div class="row">
-				<div class="col">
-				  <span class="value stats-heading" end_val="80">0</span>
-				  <span class="stats-heading">+</span><br>
-				  <span class="stats-subheading">Manufacturing facilities worldwide</span>
+			  <div class="row d-flex align-items-start">
+				<div class="col-12 col-md d-flex flex-column justify-content-center">
+					<div class="d-flex justify-content-center">
+						<span class="value stats-heading" end_val="80">0</span>
+						<span class="stats-heading">+</span><br>
+					</div>
+				  <span class="stats-subheading text-center">Manufacturing facilities worldwide</span>
 				</div>
-			
-				<div class="col">
-				  <span class="value stats-heading" end_val="100">0</span>
-				  <span class="stats-heading">+</span><br>
-				  <span class="stats-subheading">Employees</span>
+
+				<div class="col-12 col-md d-flex flex-column justify-content-center">
+					<div class="d-flex justify-content-center">
+						<span class="value stats-heading" end_val="100">0</span>
+						<span class="stats-heading">+</span><br>
+					</div>
+				  <span class="stats-subheading text-center">Employees</span>
 				</div>
-			
-				<div class="col">
-				  <span class="value stats-heading" end_val="35">0</span>
-				  <span class="stats-heading">+</span><br>
-				  <span class="stats-subheading">Valued packaging brands</span>
+
+				<div class="col-12 col-md d-flex flex-column justify-content-center">
+					<div class="d-flex justify-content-center">
+						<span class="value stats-heading" end_val="35">0</span>
+						<span class="stats-heading">+</span><br>
+					</div>
+					<span class="stats-subheading text-center">Valued packaging brands</span>
+
 				</div>
-			
-				<div class="col">
-				  <span class="value stats-heading" end_val="2">0</span>
-				  <span class="stats-heading">+</span><br>
-				  <span class="stats-subheading">Billion dollars in revenue</span>
+
+				<div class="col-12 col-md d-flex flex-column justify-content-center">
+					<div class="d-flex justify-content-center">
+						<span class="value stats-heading" end_val="2">0</span>
+						<span class="stats-heading">+</span><br>
+					</div>
+					<span class="stats-subheading text-center">Billion dollars in revenue</span>
+
 				</div>
-			
-				<div class="col">
-				  <span class="value stats-heading" end_val="6">0</span><br>
-				  <span class="stats-subheading">Continents across the globe</span>
+
+				<div class="col-12 col-md d-flex flex-column justify-content-center">
+					<div class="d-flex justify-content-center">
+						<span class="value stats-heading" end_val="6">0</span>
+						<span class="stats-heading">+</span><br>
+					</div>
+					<span class="stats-subheading text-center">Continents across the globe</span>
 				</div>
 		   
 			  </div>
