fixed about page values icons

--- a/about.html
+++ b/about.html
@@ -121,7 +121,7 @@
             <div class="row align-items-start">
                 <div class="col-sm-12 col-md-6 col-lg-3">
                     <!-- icon -->
-                    <i class="fa-solid fa-lightbulb"></i><br>
+                    <img src="images/about-page/values-icons/innovation.svg" class="values-icons" alt=""><br>
 
                     <!-- heading and text -->
                     <h3>Innovation</h3>
@@ -130,7 +130,7 @@
 
                 <div class="col-sm-12 col-md-6 col-lg-3">
                     <!-- icon -->
-                    <i class="fa-solid fa-arrows-spin"></i><br>
+                    <img src="images/about-page/values-icons/adaptability.svg" class="values-icons" alt=""><br>
 
                     <!-- heading and text -->
                     <h3>Adaptability</h3>
@@ -139,7 +139,7 @@
 
                 <div class="col-sm-12 col-md-6 col-lg-3">
                     <!-- icon -->
-                    <i class="fa-solid fa-shield"></i><br>
+                    <img src="images/about-page/values-icons/safety.svg" class="values-icons" alt=""><br>
 
                     <!-- heading and text -->
                     <h3>Safety</h3>
@@ -149,7 +149,7 @@
 
                 <div class="col-sm-12 col-md-6 col-lg-3">
                     <!-- icon -->
-                    <i class="fa-solid fa-seedling"></i>
+                    <img src="images/about-page/values-icons/sustainability.svg" class="values-icons" alt=""><br>
 
                     <!-- heading and text -->
                     <h3>Sustainability</h3>
