--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
         </div>
 
         </div>
-		<br><br><br>
+		<br><br><br><br>
 
 
 
@@ -378,7 +378,7 @@
 
 			<!-- TESTIMONIAL PAGE -->
 			<div class="carousel-item active">
-				<div class="carousel-caption d-none d-md-block">
+				<div class="carousel-caption">
 					<div class="row">
 
 						<!-- SINGLE TESTIMONIAL -->
@@ -392,7 +392,6 @@
 							<!-- testimonial text -->
 							<div id="testimonial-text">
 								“When I want quality products, I always go to Signode. Their materials are excellent, their service is great, and their co-op students are the best in the industry.”
-							
 							</div>
 							<br>
 
@@ -448,7 +447,7 @@
 
 			<!-- TESTIMONIAL PAGE -->
 			<div class="carousel-item">
-				<div class="carousel-caption d-none d-md-block">
+				<div class="carousel-caption">
 					<div class="row align-items-center">
 
 						<!-- SINGLE TESTIMONIAL -->
@@ -517,7 +516,7 @@
 
 			<!-- TESTIMONIAL PAGE -->
 			<div class="carousel-item">
-				<div class="carousel-caption d-none d-md-block">
+				<div class="carousel-caption">
 					<div class="row align-items-center">
 
 						<!-- SINGLE TESTIMONIAL -->
