--- a/applications.html
+++ b/applications.html
@@ -13,7 +13,7 @@
 		<script src="https://kit.fontawesome.com/065b6a01b6.js" crossorigin="anonymous"></script>
 
 		<!-- external stylesheet -->
-		<link rel="stylesheet" href="css/styles-industries-page.css" />
+		<link rel="stylesheet" href="css/styles-applications-page.css" />
 
 		<!-- JQuery -->
         <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
@@ -42,21 +42,41 @@
 	
 
         <!-- ******************************* HEADING ************************************** -->
-		<br><br><br><br>
+
+        <br><br><br><br>
 		<div class="container">
+
+			<!-- heading -->
 			<div class="featurette-heading">
-				<h5 class="sub-heading">Industries</h5>
-				<h2 class="fw-normal lh-1 main-heading">Industries</h2>
+				
+				<!-- breadcrumb -->
+				  <nav aria-label="breadcrumb">
+					<ol class="breadcrumb">
+					  <li class="breadcrumb-item"><a href="industries.html">Industries</a></li>
+					  <li class="breadcrumb-item active" aria-current="page"><a><b>Metals</b></a></li>
+					</ol>
+				  </nav>
+
+				<h2 class="fw-normal lh-1 main-heading">Metals</h2>
 			</div>
 
+			<!-- divider -->
 			<div class="divider-dash"></div> 
+
+			<!-- description -->
+			<p class="description">With a portfolio of protective products that minimize moisture and corrosion damage, dunnage products that ease storage and handling, and strapping solutions that secure heavy loads for transit, Signode has a full line of packaging products and equipment designed specifically for all types of mills and metal service center industry applications.
+			</p>
 			
 		</div> <br><br>
 
-        <!-- ******************************* INDUSTRIES ************************************** -->
 
-		<!-- Industries gallery -->
-		<div class="container" id="industry-gallery">
+        <!-- ******************************* APPLICATIONS ************************************** -->
+		
+		<div class="container" id="applications-gallery">
+
+			<h3 class="page-label">Applications</h3>
+			<hr><br>
+
 			  <div class="row">
 
 				<!-- Gallery item -->
@@ -101,7 +121,7 @@
 				  <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
 					  <div class="bg-white rounded shadow-sm"><img src="images/home-page/industries/metal.png" alt="" class="img-fluid card-img-top">
 						<div class="p-4">
-						  <h5> <a href="applications.html" class="gallery-text">Metals</a></h5>
+						  <h5> <a href="specific-products.html" class="gallery-text">Rod Wire</a></h5>
 						</div>
 					  </div>
 					</div>
