--- a/specific-products.html
+++ b/specific-products.html
@@ -13,7 +13,7 @@
 		<script src="https://kit.fontawesome.com/065b6a01b6.js" crossorigin="anonymous"></script>
 
 		<!-- external stylesheet -->
-		<link rel="stylesheet" href="css/styles-#-page.css" />
+		<link rel="stylesheet" href="css/styles-specific-products-page.css" />
 
 		<!-- JQuery -->
         <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
@@ -45,37 +45,98 @@
         <div id="navbar-two" class="sticky-top"></div>
 	
 
-        <!-- ******************************* PAGE CONTENT ************************************** -->
+		<!-- ******************************* HEADING ************************************** -->
+
+        <br><br><br><br>
+		<div class="container">
+
+			<!-- heading -->
+			<div class="featurette-heading">
+				
+				<!-- breadcrumb -->
+				  <nav aria-label="breadcrumb">
+					<ol class="breadcrumb">
+					  <li class="breadcrumb-item"><a href="industries.html">Industries</a></li>
+					  <li class="breadcrumb-item"><a href="applications.html">Metals</a></li>
+					  <li class="breadcrumb-item active" aria-current="page"><a><b>Rod Wire</b></a></li>
+					</ol>
+				  </nav>
+
+				<h2 class="fw-normal lh-1 main-heading">Rod Wire</h2>
+			</div>
+
+			<!-- divider -->
+			<div class="divider-dash"></div> 
+
+			<!-- description -->
+			<p class="description">With a portfolio of protective products that minimize moisture and corrosion damage, dunnage products that ease storage and handling, and strapping solutions that secure heavy loads for transit, Signode has a full line of packaging products and equipment designed specifically for all types of mills and metal service center industry applications.
+			</p>
+			
+		</div> <br><br>
+
+        <!-- ******************************* SPECIFIC PRODUCTS ************************************** -->
 
 		<div class="container">
-		<div class="row mb-2">
-			<div class="col-md-6">
-			  <div class="card flex-md-row mb-4 box-shadow h-md-250">
-				<div class="card-body d-flex flex-column align-items-start">
-				  <h3 class="mb-0">
-					<a class="text-dark" href="#">Apex® Steel Strapping</a>
-				  </h3>
-				  <p class="card-text mb-auto">Apex and Apex Plus steel strapping are cold rolled, non-heat treated, low carbon strapping manufactured with superior edge conditioning with excellent coating and surface properties.</p>
-				  <a href="#">See more</a>
+			<h3 class="page-label">Products</h3>
+			<hr><br>
+		</div>
+		
+		<!-- <div class="container content-row" id="specific-products-section">
+			<div class="row">
+				<div class="col-6">
+					<div class="card flex-md-row mb-4 box-shadow h-100">
+						<div class="card-body d-flex flex-column align-items-stretch">
+							<h3>
+								<a class="text-dark" href="#">Apex® Steel Strapping</a>
+							</h3>
+							<p class="card-text mb-auto">Apex and Apex Plus steel strapping are cold rolled, non-heat treated, low carbon strapping manufactured with superior edge conditioning with excellent coating and surface properties.</p>
+							<a href="#">See more</a>
+						</div>
+						<img class="card-img-right flex-auto d-none d-md-block w-50" src="images/apex-steel-strapping.png" alt="Card image cap">
+					</div>
 				</div>
-				<img class="card-img-right flex-auto d-none d-md-block w-50" src="images/apex-steel-strapping.png" alt="Card image cap">
-			  </div>
-			</div>
-			<div class="col-md-6">
-			  <div class="card flex-md-row mb-4 box-shadow h-md-250">
-				<div class="card-body d-flex flex-column align-items-start">
-				  <h3 class="mb-0">
-					<a class="text-dark" href="#">Magnus®</a>
-				  </h3>
-				  <p class="card-text mb-auto">Magnus is a cold-rolled, heat-treated steel strapping that provides high tensile strength and shock resistance for the heaviest-duty applications.</p>
-				  <a href="#">Continue reading</a>
+				<div class="col-6">
+					<div class="card flex-md-row mb-4 box-shadow h-250">
+						<div class="card-body d-flex flex-column align-items-stretch">
+							<h3>
+								<a class="text-dark" href="#">Magnus®</a>
+							</h3>
+							<p class="card-text mb-auto">Magnus is a cold-rolled, heat-treated steel strapping that provides high tensile strength and shock resistance for the heaviest-duty applications.</p>
+							<a href="#">Continue reading</a>
+						</div>
+						<img class="card-img-right flex-auto d-none d-md-block w-50" src="images/Steel_strap.jpg" alt="Card image cap">
+					</div>
 				</div>
-				<img class="card-img-right flex-auto d-none d-md-block w-50" src="images/Steel_strap.jpg" alt="Card image cap">
-			  </div>
-			</div>
+		  </div>
+		</div> -->
+		<div class="container content-row" id="specific-products-section">
+			<div class="row gy-4">
+				<div class="col-6">
+					<div class="card flex-md-row mb-4 box-shadow h-100">
+						<div class="card-body d-flex flex-column align-items-stretch">
+							<h3>
+								<a class="text-dark" href="product-details.html">Apex® Steel Strapping</a>
+							</h3>
+							<p class="card-text mb-auto">Apex and Apex Plus steel strapping are cold rolled, non-heat treated, low carbon strapping manufactured with superior edge conditioning with excellent coating and surface properties. </p>
+							<a href="#">See more</a>
+						</div>
+						<img class="card-img-right flex-auto d-none d-md-block w-50" src="images/apex-steel-strapping.png" alt="Card image cap">
+					</div>
+				</div>
+				<div class="col-6">
+					<div class="card flex-md-row mb-4 box-shadow h-100">
+						<div class="card-body d-flex flex-column align-items-stretch">
+							<h3>
+								<a class="text-dark" href="#">Magnus®</a>
+							</h3>
+							<p class="card-text mb-auto">Magnus is a cold-rolled, heat-treated steel strapping that provides high tensile strength and shock resistance for the heaviest-duty applications.</p>
+							<a href="#">See more</a>
+						</div>
+						<img class="card-img-right flex-auto d-none d-md-block w-50" src="images/apex-steel-strapping.png" alt="Card image cap">
+					</div>
+				</div>
 		  </div>
 		</div>
-	</div>
 
 		<!-- ******************************* FOOTER ************************************** -->
 
@@ -86,8 +147,9 @@
 		<!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
+    <!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script> -->
+    
+	<script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
     <script src="../../assets/js/vendor/popper.min.js"></script>
     <script src="../../dist/js/bootstrap.min.js"></script>
     <script src="../../assets/js/vendor/holder.min.js"></script>
