--- a/specific-products.html
+++ b/specific-products.html
@@ -81,37 +81,9 @@
 			<hr><br>
 		</div>
 		
-		<!-- <div class="container content-row" id="specific-products-section">
-			<div class="row">
-				<div class="col-6">
-					<div class="card flex-md-row mb-4 box-shadow h-100">
-						<div class="card-body d-flex flex-column align-items-stretch">
-							<h3>
-								<a class="text-dark" href="#">Apex® Steel Strapping</a>
-							</h3>
-							<p class="card-text mb-auto">Apex and Apex Plus steel strapping are cold rolled, non-heat treated, low carbon strapping manufactured with superior edge conditioning with excellent coating and surface properties.</p>
-							<a href="#">See more</a>
-						</div>
-						<img class="card-img-right flex-auto d-none d-md-block w-50" src="images/apex-steel-strapping.png" alt="Card image cap">
-					</div>
-				</div>
-				<div class="col-6">
-					<div class="card flex-md-row mb-4 box-shadow h-250">
-						<div class="card-body d-flex flex-column align-items-stretch">
-							<h3>
-								<a class="text-dark" href="#">Magnus®</a>
-							</h3>
-							<p class="card-text mb-auto">Magnus is a cold-rolled, heat-treated steel strapping that provides high tensile strength and shock resistance for the heaviest-duty applications.</p>
-							<a href="#">Continue reading</a>
-						</div>
-						<img class="card-img-right flex-auto d-none d-md-block w-50" src="images/Steel_strap.jpg" alt="Card image cap">
-					</div>
-				</div>
-		  </div>
-		</div> -->
 		<div class="container content-row" id="specific-products-section">
 			<div class="row gy-4">
-				<div class="col-6">
+				<div class="col-xl-6 mb-3">
 					<div class="card flex-md-row mb-4 box-shadow h-100">
 						<div class="card-body d-flex flex-column align-items-stretch">
 							<h3>
@@ -123,7 +95,31 @@
 						<img class="card-img-right flex-auto d-none d-md-block w-50" src="images/apex-steel-strapping.png" alt="Card image cap">
 					</div>
 				</div>
-				<div class="col-6">
+				<div class="col-xl-6 mb-3">
+					<div class="card flex-md-row mb-4 box-shadow h-100">
+						<div class="card-body d-flex flex-column align-items-stretch">
+							<h3>
+								<a class="text-dark" href="#">Magnus®</a>
+							</h3>
+							<p class="card-text mb-auto">Magnus is a cold-rolled, heat-treated steel strapping that provides high tensile strength and shock resistance for the heaviest-duty applications.</p>
+							<a href="#">See more</a>
+						</div>
+						<img class="card-img-right flex-auto d-none d-md-block w-50" src="images/apex-steel-strapping.png" alt="Card image cap">
+					</div>
+				</div>
+				<div class="col-xl-6 mb-3">
+					<div class="card flex-md-row mb-4 box-shadow h-100">
+						<div class="card-body d-flex flex-column align-items-stretch">
+							<h3>
+								<a class="text-dark" href="product-details.html">Apex® Steel Strapping</a>
+							</h3>
+							<p class="card-text mb-auto">Apex and Apex Plus steel strapping are cold rolled, non-heat treated, low carbon strapping manufactured with superior edge conditioning with excellent coating and surface properties. </p>
+							<a href="#">See more</a>
+						</div>
+						<img class="card-img-right flex-auto d-none d-md-block w-50" src="images/apex-steel-strapping.png" alt="Card image cap">
+					</div>
+				</div>
+				<div class="col-xl-6 mb-3">
 					<div class="card flex-md-row mb-4 box-shadow h-100">
 						<div class="card-body d-flex flex-column align-items-stretch">
 							<h3>
@@ -137,6 +133,12 @@
 				</div>
 		  </div>
 		</div>
+
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
 
 		<!-- ******************************* FOOTER ************************************** -->
 
