--- a/template.html
+++ b/template.html
@@ -40,75 +40,21 @@
 
         <div id="navbar-two" class="sticky-top"></div>
 	
+		<!-- ******************************* HEADING ************************************** -->
+		<br><br><br><br>
+		<div class="container">
+			<div class="featurette-heading">
+				<h5 class="sub-heading">Heading</h5>
+				<h2 class="fw-normal lh-1 main-heading">Subheading</h2>
+			</div>
+
+			<div class="divider-dash"></div> 
+			
+		</div> <br><br>
 
         <!-- ******************************* PAGE CONTENT ************************************** -->
 
 		
-		<div class="card-columns">
-      
-			<!-- job posting -->
-			<div class="card h-100">
-			  <div class="card-body">
-				<h5 class="card-title">Service Inside Technician</h5>
-
-				<h6 class="card-subtitle mb-2 text-muted"> 
-					<i class="fa-solid fa-location-dot" style="color: #b73f27"></i>
-					&nbsp; Markham, ON
-				</h6>
-
-				<p class="card-text">The Service Inside Technician performs duties to service all general-purpose equipment and a wide variety of industrial and specific application machines heads, modules, hand tools and printing equipment.</p>
-				<button class="apply-button">Apply now</button>
-				<button class="view-button">View details</button>
-
-				<p class="date-text">Date posted: April 3, 2022</p>
-
-
-			  </div>
-			</div>
-	  
-			<!-- job posting -->
-			<div class="card h-100">
-				<div class="card-body">
-				  <h5 class="card-title">Field Service Technician</h5>
-
-				  <h6 class="card-subtitle mb-2 text-muted"> 
-					  <i class="fa-solid fa-location-dot" style="color: #b73f27"></i>
-					  &nbsp; Markham, ON
-				  </h6>
-
-				  <p class="card-text">The Service Inside Technician performs duties to service all general-purpose equipment and a wide variety of industrial and specific application machines heads, modules, hand tools and printing equipment.</p>
-				  <button class="apply-button">Apply now</button>
-				  <button class="view-button">View details</button>
-
-				  <p class="date-text">Date posted: April 3, 2022</p>
-
-
-				</div>
-			  </div>
-	  
-			  <!-- job posting -->
-			<div class="card h-100">
-				<div class="card-body">
-				  <h5 class="card-title">CI Engineer</h5>
-
-				  <h6 class="card-subtitle mb-2 text-muted"> 
-					<i class="fa-solid fa-location-dot" style="color: #b73f27"></i>
-					&nbsp; Markham, ON
-				</h6>
-
-				  <p class="card-text">The Service Inside Technician performs duties to service all general-purpose equipment and a wide variety of industrial and specific application machines heads, modules, hand tools and printing equipment.</p>
-				  <button class="apply-button">Apply now</button>
-				  <button class="view-button">View details</button>
-
-				  <p class="date-text">Date posted: April 3, 2022</p>
-
-				</div>
-			  </div>
-		
-	  
-			<!-- <br><br><br><br><br><br><br><br><br><br> -->
-
-		  </div>
 
 		<!-- ******************************* FOOTER ************************************** -->
 
